# tetcipp

./: .gitignore  CMakeLists.txt  README.md  unixBuild.sh  unixBuildDebug.sh
shaders/: shader.frag  shader.vert
src/: main.cpp
src/app/: Game.cpp  Game.hpp  main.cpp
src/ecs/: component.hpp  register.hpp
src/engine/: Engine.cpp  Engine.hpp
src/engine/component/: ModelComponent.hpp  UniformBufferObjectComponent.hpp
src/engine/components/: MeshRenderer.hpp
src/engine/system/: RenderSystem.hpp  RotationSystem.hpp  (+1 more)
src/renderer/: ecs_component.hpp  ecs_entity.hpp  ecs_id_generator.hpp  ecs_register.cpp  ecs_register.hpp  rlm_buffer.cpp  rlm_buffer.hpp  rlm_descriptor.hpp  rlm_descriptor_set.cpp  rlm_descriptor_set.hpp  rlm_descriptor_set_layout.cpp  rlm_descriptor_set_layout.hpp  rlm_device.cpp  rlm_device.hpp  rlm_model.cpp  rlm_model.hpp  rlm_pipeline.cpp  rlm_pipeline.hpp  rlm_renderer.cpp  rlm_renderer.hpp  rlm_simple_renderer.cpp  rlm_simple_renderer.hpp  rlm_swapchain.cpp  rlm_swapchain.hpp  rlm_tetcipp_app.cpp  rlm_tetcipp_app.hpp  rlm_window.cpp  rlm_window.hpp
src/rlm/: buffer.cpp  buffer.hpp  core.cpp  core.hpp  device.cpp  device.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  rlm_buffer.cpp  rlm_buffer.hpp  rlm_device.cpp  rlm_device.hpp  rlm_model.cpp  rlm_model.hpp  rlm_pipeline.cpp  rlm_pipeline.hpp  rlm_renderer.cpp  rlm_simple_renderer.cpp  rlm_simple_renderer.hpp  rlm_swapchain.cpp  rlm_tetcipp_app.cpp  rlm_tetcipp_app.hpp  simple_renderer.cpp  simple_renderer.hpp  swapchain.cpp  swapchain.hpp  tetcipp_app.cpp  tetcipp_app.hpp  window.cpp  window.hpp
(+12 files in other folders)
